# options

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: coverage.yml
cmake/: compile_flags.cmake  rpi.cmake
src/: CMakeLists.txt
src/example/: CMakeLists.txt  example.cpp  example_full.cpp  example_simple.cpp
src/options/: CMakeLists.txt  Converters.cpp  Converters.hpp  Option.cpp  Option.hpp  Options.cpp  Options.hpp  Parser.cpp  Parser.hpp  Validator.hpp
src/tests/: CMakeLists.txt  Option_Test.cpp  Options_Test.cpp  Parser_Test.cpp
